# AIPP

./: .gitignore  AGENTS.md  CLAUDE.md  TestPlan.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/artifacts/templates/vue/src/lib/: artifact-sdk.ts
src-tauri/capabilities/: migrated.json  mobile.json
src-tauri/src/: errors.rs  lib.rs  main.rs  window.rs
src-tauri/src/api/: ai_api.rs  assistant_api.rs  attachment_api.rs  conversation_api.rs  copilot_api.rs  copilot_lsp.rs  export_api.rs  genai_client.rs  highlight_api.rs  llm_api.rs  mod.rs  operation_api.rs  plugin_api.rs  scheduled_task_api.rs  skill_api.rs  sub_task_api.rs  system_api.rs  todo_api.rs  token_statistics_api.rs  updater_api.rs
src-tauri/src/api/ai/: acp.rs  chat.rs  config.rs  conversation.rs  events.rs  mod.rs  summary.rs  title.rs  types.rs
src-tauri/src/api/tests/: ai_api_tests.rs  ai_config_tests.rs  branch_bdd_tests.rs  chat_tests.rs  conversation_api_tests.rs  copilot_api_tests.rs  integration_tests.rs  mcp_detection_tests.rs  mcp_registry_tests.rs  mod.rs  regenerate_tests.rs  scheduled_task_api_tests.rs  schema_equivalence_tests.rs  summary_tests.rs
src-tauri/src/artifacts/: artifact_bridge_api.rs  artifact_data_db.rs  artifacts_db.rs  code_utils.rs  collection_api.rs  env_installer.rs  mod.rs  preview_router.rs  react_preview.rs  react_runner.rs  shared_components.rs  vue_preview.rs  vue_runner.rs  workspace.rs
src-tauri/src/db/: artifacts_db.rs  assistant_db.rs  conn_helper.rs  conversation_db.rs  llm_db.rs  mcp_db.rs  mod.rs  plugin_db.rs  scheduled_task_db.rs  skill_db.rs  sub_task_db.rs  system_db.rs  tests.rs
src-tauri/src/db/tests/: assistant_db_tests.rs  attachment_db_tests.rs  conversation_db_tests.rs  llm_db_tests.rs  mcp_db_tests.rs  message_db_tests.rs  mod.rs  plugin_db_tests.rs  sub_task_db_tests.rs  system_db_tests.rs  test_helpers.rs
src-tauri/src/entity/: llm_model.rs  llm_provider.rs  llm_provider_config.rs  mod.rs
src-tauri/src/mcp/: detection.rs  execution_api.rs  mcp_db.rs  mod.rs  prompt.rs  registry_api.rs  summarizer.rs  util.rs
src-tauri/src/mcp/builtin_mcp/: interaction.rs  mod.rs  templates.rs
src-tauri/src/mcp/builtin_mcp/agent/: handler.rs  mod.rs  tests.rs  types.rs
src-tauri/src/mcp/builtin_mcp/agent/todo/: handler.rs  mod.rs  types.rs
src-tauri/src/mcp/builtin_mcp/operation/: bash_ops.rs  file_ops.rs  handler.rs  mod.rs  permission.rs  state.rs  types.rs
src-tauri/src/mcp/builtin_mcp/operation/tests/: bash_ops_tests.rs  mod.rs  (+2 more)
src-tauri/src/mcp/builtin_mcp/search/: browser.rs  browser_pool.rs  engine_manager.rs  fetcher.rs  fingerprint.rs  handler.rs  mod.rs  types.rs
src-tauri/src/scheduler/: mod.rs  scheduled_task.rs  summary_task.rs
src-tauri/src/skills/: installer.rs  mod.rs  parser.rs  prompt.rs  scanner.rs  types.rs
src-tauri/src/slash/: cache.rs  mod.rs  parser.rs  router.rs  types.rs
src-tauri/src/state/: activity_state.rs  message_token.rs  mod.rs
src-tauri/src/template_engine/: mod.rs  plugin_bangs.rs  tests.rs
src-tauri/src/utils/: db_utils.rs  mod.rs  path_utils.rs  python_utils.rs  uv_utils.rs  window_utils.rs
(+309 files in other folders)
