[package]
name = "Aipp"
version = "0.4.1"
description = "Chat with LLM use powerful tools"
authors = ["xieisabug"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aipp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
zip = "2.2"
zip-extract = "0.1.2"
dirs = "5.0.1"
tauri = { version = "2", features = [ "test", "protocol-asset", "tray-icon", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "stream", "blocking", "rustls-tls"] }
htmd = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
async-trait = "0.1"
which = "6"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
config = "0.14.0"
futures = "0.3.30"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10.5"
scraper = "0.18"
thiserror = "1.0.63"
semver = "1.0"
sha2 = "0.10.8"
hex = "0.4.3"
anyhow = "1.0"
base64 = "0.22"
mime_guess = "2.0"
open = "3.0"
aes-gcm = "0.10"
flate2 = "1.0"
rand = "0.8"
fastrand = "2.0"
mockito = "0.31"
image = "0.25"
uuid = { version = "1.0", features = ["v4"] }
glob = "0.3"
urlencoding = "2.1"
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-clipboard-manager = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
genai = { git = "https://github.com/xieisabug/rust-genai.git", rev="cca98cc1b1725c59b0d0af96569a89b9b4c2333b" }
rmcp = { version = "0.8", features = [
	"client",
	"transport-io",
	"transport-sse-client",
	"transport-sse-client-reqwest",
	"transport-streamable-http-client",
	"transport-streamable-http-client-reqwest",
	"transport-child-process",
	"reqwest"
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tauri-plugin-notification = "2"
syntect = "5.3.0"
# ACP (Agent Client Protocol) SDK
agent-client-protocol = { version = "0.9", git = "https://github.com/agentclientprotocol/rust-sdk" }

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut =  { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
playwright = "0.0.20"
get-selected-text = "0.1.6"
arboard = { version = "3.4", features = ["image-data"] }
tauri-plugin-updater = "2"

[dev-dependencies]
rstest = "0.18"
tokio-test = "0.4"
tempfile = "3.8"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
